crates/vize_patina/tests/snapshots/integration__next_tick_history__invalid-arrow-expression-void-call-sfc.snap
---
source: crates/vize_patina/tests/next_tick_history.rs
expression: first_bytes
---
Case {
    id: "invalid-arrow-expression-void-call-sfc",
    history: "c7c1d7c968a8528a945a57693ce092fd3872fd4d",
    source: "<template><p>雪😀</p></template>\r\n<script lang=\"ts\">\r\nimport { nextTick } from 'vue'; const tick = () => void nextTick();\r\n</script>\r\n",
    filename: "next-tick-invalid-arrow-expression-void-call.vue",
    entry: "sfc",
    rule: "script/valid-next-tick",
    vue_version: None,
    vapor: None,
    diagnostics: 1,
    fixes: 0,
}
Observation {
    initial: LintResult {
        filename: "next-tick-invalid-arrow-expression-void-call.vue",
        diagnostics: [
            LintDiagnostic {
                rule_name: "script/valid-next-tick",
                severity: Warning,
                message: "The result of this nextTick() call is ignored.",
                start: 113,
                end: 123,
                help: Some(
                    "nextTick() returns a promise that resolves after the DOM updates. `await` it, chain `.then(...)`, or pass a callback (`nextTick(() => {})`); a bare call does nothing useful.",
                ),
                labels: [
                    Label {
                        message: "ignored nextTick() result",
                        start: 113,
                        end: 123,
                    },
                ],
                fix: None,
            },
        ],
        error_count: 0,
        warning_count: 1,
    },
    applications: [],
    unchanged_requery: Some(
        LintResult {
            filename: "next-tick-invalid-arrow-expression-void-call.vue",
            diagnostics: [
                LintDiagnostic {
                    rule_name: "script/valid-next-tick",
                    severity: Warning,
                    message: "The result of this nextTick() call is ignored.",
                    start: 113,
                    end: 123,
                    help: Some(
                        "nextTick() returns a promise that resolves after the DOM updates. `await` it, chain `.then(...)`, or pass a callback (`nextTick(() => {})`); a bare call does nothing useful.",
                    ),
                    labels: [
                        Label {
                            message: "ignored nextTick() result",
                            start: 113,
                            end: 123,
                        },
                    ],
                    fix: None,
                },
            ],
            error_count: 0,
            warning_count: 1,
        },
    ),
}
